Fix overlapping error on Travis with make_visible option on attach_field spec helper

--- a/app/assets/stylesheets/documentable.scss
+++ b/app/assets/stylesheets/documentable.scss
@@ -8,6 +8,10 @@
     background-color: $light-gray;
   }
 
+  input.document_ajax_attachment[type=file]{
+    display: none;
+  }
+
   .file-name {
     margin-top: $line-height / 2;
   }
